--- a/bootsrap-customization/index.html
+++ b/bootsrap-customization/index.html
@@ -2,10 +2,11 @@
    <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      
+   
 <link rel="stylesheet" href="style/dist.css"/>
       <title>Bootstrap customization</title>
    </head>
+<!-- Put first card here-->
    <body>
       <div class="container">
       <div class="row mt-4">
@@ -30,7 +31,9 @@
                the viewer. Gregor then turned to look out the window at the dull
                weather. Drops
             </p>
+            <button class="btn btn-danger">Delete this</button>
          </div>
+         <!-- Put second cards here-->
          <div class="col-6">
             <p>
                One morning, when Gregor Samsa woke from troubled dreams, he
@@ -52,6 +55,7 @@
                the viewer. Gregor then turned to look out the window at the dull
                weather. Drops
             </p>
+            <button class="btn btn-primary"> Accept</button>
       </div>
    </body>
 </html>
